--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -133,15 +133,15 @@ nav ul {
 nav {
     pointer-events: none;
     position: fixed;
-    z-index: 50;
+    z-index: 1;
     right: 0;
     top: 0;
     bottom: 0;
-    padding: 120px 40px 64px 64px;
+    padding: 120px 40px 64px 10px;
     box-sizing: border-box;
-    background: rgba(0, 0, 0, .5);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    /* background: rgba(0, 0, 0, .2); */
+    /* -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px); */
     transform: translateX(40px);
     opacity: 0;
     will-change: transform, opacity;
@@ -158,9 +158,8 @@ nav ul {
 }
 
 nav ul li {
-    font-weight: 900;
-    font-size: 4rem;
-    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 3rem;
     letter-spacing: 8px;
     padding: 24px 0 0 48px;
 }
@@ -437,15 +436,16 @@ div.welcomeToGax .weCreate {
     flex-direction: column;
     font-family: 'Plus Jakarta Sans', sans-serif;
     color:white;
-    padding-bottom: 2vh;
+    padding-bottom: 20px;
 }
 
 .wefoot1 {
     position: relative;
     text-align: center;
     width:100%;
-    padding-bottom: 2vh;
-    font-size: 5vh;
+    padding-bottom: 3vh;
+    font-size: 4.5vh;
+    font-weight: 500;
 }
 
 .animate{
@@ -458,23 +458,27 @@ div.welcomeToGax .weCreate {
 
 @keyframes scrollanim {
     0%{
-        padding-bottom: 2vh;
-        font-size: 5vh;
+        padding-bottom: 3vh;
+        font-size: 4.5vh;
+        font-weight: 500;
     }
     100% {
-        padding-bottom: 67vh;
+        padding-bottom: 64.5vh;
         font-size: 6vh;
+        font-weight: 600;
     }
 }
 
 @keyframes scrollbackanim {
     0% {
-        padding-bottom: 67vh;
+        padding-bottom: 64.5vh;
         font-size: 6vh;
+        font-weight: 600;
     }
     100% {
-        padding-bottom: 2vh;
-        font-size: 5vh;
+        padding-bottom: 3vh;
+        font-size: 4.5vh;
+        font-weight: 500;
     }
 }
 
@@ -483,6 +487,8 @@ div.welcomeToGax .weCreate {
     bottom:0;
     text-align: center;
     width:100%;
+    padding-bottom: 3vh;
+    font-size: 1.85vh;
 }
 @supports (backdrop-filter: none) {
     .blur {
@@ -493,11 +499,33 @@ div.welcomeToGax .weCreate {
 }
 
 div.projects {
-    position: sticky;
-    top: 0;
     padding: 280px 0 100px;
 }
 
+.hideprojects{
+    animation: goaway 1s forwards;
+}
+
+.showprojects{
+    animation: comeaway 1s forwards;
+}
+
+@keyframes goaway {
+    100%{
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+}
+@keyframes comeaway {
+    0%{
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
 div.projects .projectsHeader {
     display: flex;
     align-items: center;
@@ -580,7 +608,7 @@ div.projects .projectsHeader h4::after {
 .arrowright {
     position: fixed;
     width:100%;
-    height:7vh;
+    height:6vh;
     left:9vw;
     background: url(/assets/images/icons/arrow.svg) no-repeat center;
     animation: pulseright 2s linear infinite;
@@ -604,7 +632,7 @@ div.projects .projectsHeader h4::after {
 .arrowleft {
     position: fixed;
     width:100%;
-    height:7vh;
+    height:6vh;
     right:9vw;
     background: url(/assets/images/icons/arrow.svg) no-repeat center;
     transform: rotate(180deg);
@@ -839,22 +867,44 @@ div.fullpagefooter .taglineParent {
 }
 
 div.fullpagefooter .taglineParent .taglineBlock {
-    font-size: 12vw;
+    font-size: 10vw;
     z-index: 3;
     font-weight: 800;
-    margin-top: 10%;
+    margin-top: 20%;
+}
+
+#lets{
+    margin-right: 5vw;
+}
+
+#create{
+    margin-left:10vw;
 }
 
 div.fullpagefooter .footer {
     position: fixed;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     bottom: 0;
     width: 100%;
     height: 7vh;
     background-color: rgb(255, 255, 255);
     color:#000000;
+    z-index: 9999;
+}
+
+div.fullpagefooter .footer h4{
+    margin-right:2%;
+}
+
+div.fullpagefooter .footer h4 a{
+    color:black;
+}
+
+div.fullpagefooter .footer h4 a:hover{
+    color:#e24c1e;
+    cursor: pointer;
 }
 
 .contactZone {
