--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9,12 +9,13 @@ html,
 body {
     height: 100%;
     width: 100%;
-    background-color: rgb(255, 102, 0);
+    background-color: rgb(0, 0, 0);
     scrollbar-width: none;
     /* Firefox */
     font-family: 'Plus Jakarta Sans', sans-serif;
     color:white;
-    overscroll-behavior: contain;
+    overflow: hidden;
+    overscroll-behavior: none;
 }
 
 body::-webkit-scrollbar {
@@ -124,6 +125,58 @@ body.menuOpen nav {
 
 header .momaya .logo {
     width: 56px;
+}
+
+@keyframes logogo {
+    0%{
+        scale: 1;
+    }
+    20%{
+        opacity: 100%;
+    }
+    100%{
+        scale: 0;
+        opacity: 0%;
+        visibility: hidden;
+        filter: blur(8px);
+    }
+}
+@keyframes logocome {
+    0%{
+        scale: 0;
+        opacity: 0%;
+        visibility: hidden;
+    }
+    50%{
+        opacity: 0%;
+        filter: blur(8px);
+        visibility: visible;
+    }
+    100%{
+        scale: 1;
+        opacity: 100%;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    header {
+        position: fixed;
+        z-index: 100;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 24px 40px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .menu {
+        visibility: hidden;
+    }
+    header .momaya .logo {
+        margin-left: 40px;
+        width: 56px;
+    }
 }
 
 nav,
@@ -626,8 +679,8 @@ div.welcomeToGax .weCreate {
     }
     .moreblur {
         background-color: rgba(0, 0, 0, 0);
-        -webkit-backdrop-filter: blur(30px);
-        backdrop-filter: blur(30px);
+        -webkit-backdrop-filter: blur(2px);
+        backdrop-filter: blur(2px);
     }
 }
 
@@ -1122,6 +1175,7 @@ div.fullpagefooter .taglineParent .taglineBlock {
     }
     #lets{
         margin-right: 0vw;
+        margin-left:8vw;
     }
     #create{
         margin-left:0vw;
@@ -1308,7 +1362,7 @@ button[type=submit].startButton .mousePointer {
         background-size: contain;
     }
 }
-@media only screen and (min-width: 400px) and (max-width: 700px){
+@media only screen and (max-width: 600px){
     div.fullpagefooter a.startButton {
         position: absolute;
         top: 420px;
@@ -1317,15 +1371,17 @@ button[type=submit].startButton .mousePointer {
         text-transform: uppercase;
         -webkit-appearance: none;
         border: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: absolute;
         padding: 8px 32px;
-        font-size: 5vh;
+        font-size: 38px;
         letter-spacing: .2em;
         border-radius: 32px;
         background: #09090b;
         color: #fc957e;
         text-decoration: none;
-        left: 20vw;
         width: 160px;
     }
     .startButton .mousePointer {
@@ -1347,4 +1403,24 @@ button[type=submit].startButton .mousePointer {
     mix-blend-mode: overlay;
     opacity: .33;
     background-position: left center;
+}
+
+@keyframes hidefooter {
+    0%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 0%;
+        transform: translateY(300px);
+    }
+}
+@keyframes showfooter {
+    0%{
+        opacity: 0%;
+        transform: translateY(200px);
+    }
+    100%{
+        opacity: 100%;
+        transform: translateY(0px);
+    }
 }
