--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -501,11 +501,36 @@ div.welcomeToGax .weCreate {
     z-index: -1;
 }
 
-.wearetext {
-    position: fixed;
-    height: 60vh;
-    left: 10%;
-    bottom: 30%;
+@media only screen and (min-width: 900px){
+    .wearetext {
+        visibility: visible;
+        position: fixed;
+        height: 60vh;
+        left: 10%;
+        bottom: 30%;
+    }
+    .wearetext lottie-player {
+        src: "/assets/lottie/we_are_MO-MAYA_WEB.json"
+    }
+    .wearetextphone{
+        visibility: hidden;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    .wearetextphone{
+        visibility: visible;
+        position: fixed;
+        height: 60vh;
+        left: 12%;
+        bottom: 30%;
+    }
+    .wearetext{
+        visibility: hidden;
+    }
+    .wearetextphone lottie-player {
+        src: "/assets/lottie/we_are_MO-MAYA_PHONE.json"
+    }
 }
 
 .showtype{
