--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -181,8 +181,8 @@ header .momaya .logo {
     }
 
     header .momaya .logo {
-        /* margin-left: 40px; */
-        width: 56px;
+        margin-left: 45px;
+        width: 96px;
     }
 }
 
